--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             >
                 <a-entity
                     id="bowser-model"
-                    scale="0.39850786062967924 0.39850786062967924 0.39850786062967924"
+                    scale="0.5 0.5 0.5"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
